# Personal-Expense-Tracker

./: .gitignore  Cargo.toml  README.md  expenses.db
.github/workflows/: ci.yml
expense_tracker/: Cargo.toml  expenses.db
expense_tracker/src/: app.rs  lib.rs  main.rs  models.rs  ui.rs
expense_tracker/tests/: app_tests.rs  models_tests.rs
src/: app.rs  main.rs  models.rs  ui.rs
tests/: app_tests.rs  ui_tests.rs
