[package]
name = "expense_tracker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
egui = "0.24"
eframe = "0.24"
rusqlite = { version = "0.30", features = ["bundled"] }
chrono = { version = "0.4.31", features = ["serde"] }
bcrypt = "0.15.0"
plotters = "0.3.5"
image = "0.24.7"
rand = "0.8.5"